<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">


    <ImageView
        android:id="@+id/lastUpdateImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccinesInputTextView"
        app:srcCompat="@drawable/latest_update" />

    <ImageView
        android:id="@+id/sourceImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastObservationInputView"
        app:srcCompat="@drawable/source" />

    <ImageView
        android:id="@+id/vaccineImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryInputTextView"
        app:srcCompat="@drawable/vaccine" />

    <TextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/countryTextView"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/countryImageView"
        app:layout_constraintStart_toEndOf="@+id/countryImageView" />

    <TextView
        android:id="@+id/countryInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="brazil"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryTextView" />

    <TextView
        android:id="@+id/vaccinesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vaccinesTextView"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/vaccineImageView"
        app:layout_constraintStart_toEndOf="@+id/vaccineImageView" />

    <TextView
        android:id="@+id/vaccinesInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="pfizer"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccineImageView" />

    <TextView
        android:id="@+id/lastObservationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lastUpdateTextView"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/lastUpdateImageView"
        app:layout_constraintStart_toEndOf="@+id/lastUpdateImageView" />

    <TextView
        android:id="@+id/lastObservationInputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="2021-02-05"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastObservationTextView" />

    <TextView
        android:id="@+id/sourceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sourceTextView"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/sourceImageView"
        app:layout_constraintStart_toEndOf="@+id/sourceImageView" />

    <TextView
        android:id="@+id/totalDosesInputView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Ministry of Health"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceTextView" />

    <ImageView
        android:id="@+id/countryImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/country" />

    <Button
        android:id="@+id/button"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginEnd="4dp"
        android:clickable="false"
        android:text="MORE ➡"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>